--- a/app/src/main/res/layout/fragment_zat.xml
+++ b/app/src/main/res/layout/fragment_zat.xml
@@ -1,15 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:orientation="vertical"
     tools:context="com.example.a77_da_000.sauat.ZatFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:padding="8dp">
 
         <TextView
             android:id="@+id/formedWord"
@@ -73,6 +69,4 @@
             android:layout_weight="1"
             android:layout_margin="4dp"
             android:text="@string/km1" />
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
